--- a/src/blocks/preview/preview.pug
+++ b/src/blocks/preview/preview.pug
@@ -14,4 +14,6 @@ mixin preview()
                 button.preview__buttons-watch Watch
                 button.preview__buttons-more More information
         .preview__img
-            img(src=require(`blocks/preview/img/banner.png`), alt="banner")
+            picture
+               source(type='image/webp' srcset='assets/images/banner.webp')
+               img(src=require(`blocks/preview/img/banner.png`), alt="banner")
